<?xml version="1.0"?>
<package format="2">
  <name>uniros</name>
  <version>0.0.1</version>
  <description>ROS-Based Reinforcement Learning Across Simulated and Real-world Robotics</description>

  <author email="j.kapukotuwa@research.ait.ie">Jayasekara Kapukotuwa</author>
  <maintainer email="j.kapukotuwa@research.ait.ie">Jayasekara Kapukotuwa</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
